use Map.of
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>